fix: fixes flexbox layout bugs

--- a/src/app/meditation/meditation.component.css
+++ b/src/app/meditation/meditation.component.css
@@ -2,6 +2,10 @@ md-card.nopadding {
   padding: 0;
 }
 
+.no-shrink {
+  flex-shrink: 0;
+}
+
 md-card-title {
   display: flex;
 }
