--- a/src/app/question/question.component.css
+++ b/src/app/question/question.component.css
@@ -17,6 +17,8 @@
 
 md-tab-group {
   display: block;
+  min-height: 50px;
+  flex-shrink: 0;
 }
 
 .info-msg{
